# SACRO-ML

./: .buildinfo  .codecov.yml  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CITATION.cff  CNAME  CONTRIBUTING.md  Contributing.md  Glossary.html  LICENSE  Makefile  README.md  config_lira_cmd1.json  config_lira_cmd2.json  contributing.html  cyclonedx-json  example_report.json  examples.html  genindex.html  index.html  installation.html  introduction.html  lira_config.json  lrconfig.json  notebook_examples.html  objects.inv  programmatically_worstcase_report.json  py-modindex.html  pyproject.toml  pytorch_examples.html  qmia_tuning_log.md  requirements.txt  risk_examples.html  run_experiments.py  sacro-dictionary.txt  safemodel.html  safemodel_examples.html  scikit_learn_examples.html  (+9 more)
.doctrees/: Glossary.doctree  contributing.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  introduction.doctree  notebook_examples.doctree  pytorch_examples.doctree  risk_examples.doctree  safemodel.doctree  safemodel_examples.doctree  scikit_learn_examples.doctree  support.doctree  unsupported_examples.doctree  user_guide.doctree  user_stories.doctree
.doctrees/attacks/: attribute.doctree  data.doctree  index.doctree  likelihood.doctree  metrics.doctree  output_format.doctree  report.doctree  structural.doctree  target.doctree  worst_case.doctree
.doctrees/notebooks/: README.doctree  (+6 more)
.github/: dependabot.yml
JSON_Output_Format_and_ConfigurationFile_Documentation/: README.md  lira_example1_report.json
LiteratureReview/: Literature_Benchmark_Datasets.md
Output_JSON_Format/: README.md  programmatically_worstcase_example1_report.json
_modules/: index.html
_sources/: contributing.rst.txt  examples.rst.txt  index.rst.txt  installation.rst.txt  introduction.rst.txt  pytorch_examples.rst.txt  safemodel.rst.txt  safemodel_examples.rst.txt  scikit_learn_examples.rst.txt  unsupported_examples.rst.txt  user_stories.rst.txt
aisdc/: DataLogger.py  __init__.py  example_data_log.json  generate_report.py  main.py  metrics.py  new_metrics.py
attack_utilities/: dp_svc_example.py  estimator_template.py
attacks/: attack.py  attribute.html  attribute_attack.py  data.html  dataset.py  index.html  likelihood.html  likelihood_attack.py  likelihood_test.py  metrics.html  metrics.py  mia_extremecase.py  output_format.html  report.html  report.py  structural.html  target.html  worst_case.html  worst_case_attack.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
data_preprocessing/: data_interface.py
development_files/: safekeras.py.saved  structural_attack.ipynb  test_safekeras2.py  test_safekeras2.py.saved
docs/: Makefile  requirements.txt
example_data_log/: README.md  example_data_log.json
example_notebooks/: example-notebook-SVC.ipynb  example-notebook-decisiontree.ipynb  example-notebook-keras.ipynb  example-notebook-randomforest.ipynb  readme.md
examplenotebooks/: example-notebook-SVC.ipynb  example-notebook-decisiontree.ipynb  example-notebook-keras.ipynb  example-notebook-randomforest.ipynb  examplenotebook-keras.ipynb  readme.md
examples/: MIAandAIA_attack_example.py  MIAandAIA_attacks_example.py  README.md  attack_attribute.py  attack_lira.py  attack_worstcase.py  attribute_inference_example.py  lira_attack_example.py  nursery_data.py  pytorch.py  safemodel.py  safemodel_attack_integration.py  safemodel_attack_integration_bothcalls.py  safemodel_attack_integration_request_release.py  safemodel_attack_integration_runattack.py  test_safemodel_attack_integration.py  train_rf_breast_cancer.py  train_rf_nursery.py  worst_case_attack_example.py
experiments/: analysis_results.ipynb  examine_probs.ipynb  metrics.py  mia_extremecase.py  requirements.txt  run_eperiments_results_and_target_metrics.py  run_experiments.py  run_experiments_target_metrics.py
notebooks/: README.html  attribute_inference_cancer.html  example-notebook-SVC.html  example-notebook-decisiontree.html  example-notebook-randomforest.html  instance_based_mimic.html  instance_based_mimic.ipynb  membership_inference_cancer.html
notes/: 00_master_sprint1_task_list.md  02_08_23.md  03_05_2023.md  04-10-23.md  04_04_2023.md  05_07_2023.md  06_06_2023.md  07-06-2023.md  07_06_2023.md  08_05_2023-code_planning.md  09_08_2023.md  10_05_2023.md  12_07_2023.md  13_09_2023.md  14_06_2023.md  15_03_2023.md  17_05_2023.md  18-10-2023.md  19_04_2023.md  19_07_2023.md  2023-08-16.md  2023-09-06-minutes.md  2023-10-11.md  2023-10-25.MD  2023_02_22.md  20_09_2023.md  21-06-2023.md  23_08_23.md  24_05_2023.md  26_04_2023.md  26_7_2023.md  28_06_2023.md  28_06_23_minutes.md  29_03_23.md  31_05_2023.md  Proposed plan for v1.0.6.md  minutes-2023-10-25.MD  v106-plan-checklist.md
outputs_lira/: report_lira.json
preprocessing/: index.html  loaders.html  loaders.py
risk_examples/: README.md  readme.md
sacroml/: main.py  metrics.py  version.py
safemodel/: __init__.py  examples.html  extending.html  index.html  reporting.py  rules.json  safedecisiontree.html  safekeras.html  safemodel.html  safemodel.py  saferandomforest.html  safesvc.html
scratch/: example.json  train_models.py
sprint1/: aisdc-requirements.txt
target_model_for_lira/: target.json
tests/: __init__.py  common.py  conftest.py  lrconfig.json  lrconfig2.json  lrconfig_cmd.json  test_attack_report_formatter.py  test_attacks.py  test_attacks_dataset.py  test_attacks_target.py  test_attacks_via_safemodel.py  test_attribute_inference_attack.py  test_data_interface.py  test_failfast.py  test_generate_report.py  test_lira_attack.py  test_loaders.py  test_metrics.py  test_multiple_attacks.py  test_openml_dependency.py  test_safedecisiontreeclassifier.py  test_safekeras.old  test_safekeras.py  test_safekeras2.py  test_safemodel.py  test_saferandomforestclassifier.py  test_safesvc.py  test_safetf.py  test_single_config_cmd.json  test_structural_attack.py  test_worst_case_attack.py
user_stories/: README.md  default_config.yaml  generate_disclosure_risk_report.py  run_user_stories.py
(+418 files in other folders)
