[metadata]
name = sacroml
version = 1.2.3
description = Tools for the statistical disclosure control of machine learning models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AI-SDC/SACRO-ML
maintainer = Jim Smith
maintainer_email = james.smith@uwe.ac.uk
license = MIT
license_files = LICENSE.md
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
    Operating System :: OS Independent
keywords =
    data-privacy
    data-protection
    machine-learning
    privacy
    privacy-tools
    statistical-disclosure-control
project_urls =
    Changelog = https://github.com/AI-SDC/SACRO-ML/CHANGELOG.md
    Documentation = https://ai-sdc.github.io/SACRO-ML/
    Bug Tracker = https://github.com/AI-SDC/SACRO-ML/issues
    Discussions = https://github.com/AI-SDC/SACRO-ML/discussions

[options]
python_requires = >=3.9
zip_safe = False
include_package_data = True
packages = find:

install_requires =
    acro==0.4.8
    fpdf
    pypdf
    multiprocess
    scikit-learn
    xgboost
    dictdiffer

[options.entry_points]
console_scripts =
    sacroml = sacroml.main:main

[options.package_data]
sacroml.safemodel = rules.json

[options.extras_require]
doc =
    numpydoc
    sphinx-autopackagesummary
    sphinx-issues
    sphinx-prompt
    sphinx-rtd-theme
    sphinx

test =
    pytest
    pytest-cov

[options.packages.find]
exclude =
    docs*
    examples*
    tests*
    user_stories*
